--- a/tanstack-query/client/package.json
+++ b/tanstack-query/client/package.json
@@ -18,6 +18,7 @@
     "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.15",
     "uuid": "^11.1.0"
